spacing between videos & photos section fixed

--- a/style.css
+++ b/style.css
@@ -65,7 +65,6 @@ section:nth-child(even) {
 }
 
 section {
-	min-height: 100vh;
 	text-align: center;
 	font-size: 40px;
 	padding: 25px;
